<resources>
    <string name="app_name">Kiukas</string>
    <string name="infoButton">Info</string>
    <string name="guessGame">Guess game</string>

    <string name="info">Info</string>
    <string name="firstInfoText">This application has been created by Jonne Kiukas. The application
        contains different kinds of functionalities for example a simple guess game, a company
        search, a timer and a function which tells user\'s location.</string>

    <string name="secondInfoText">The Company search functionality gets the data from YTJ\'s open
        interface service. Only Finnish Ltd. companies can be searched. The user must allow the
        application to use user\'s location. If this is rejected location will not be displayed.
        User\'s location will not be used or shared with anyone.</string>

    <string name="guessGameTitle">Guess where the diamond is</string>
    <string name="guessGameScore" translatable="false">0</string>
    <string name="guessGameCurrentTries" translatable="false">0</string>
    <string name="guessGameTotalTriesText">"The total number of attempts it took you to find the diamond: "</string>
    <string name="guessGameRefreshButton">Restart</string>
    <string name="guessGameResetHighScoreButton">Reset highscore</string>
    <string name="guessGameHighScoreText">Highscore:</string>

    <string name="title_home">Home</string>
    <string name="title_location">Location</string>
    <string name="title_timer">Timer</string>

    <string name="locationTitle">Your location</string>
    <string name="locationButton">Show location on the map</string>
    <string name="locationLatitudeHint">Latitude</string>
    <string name="locationLongitudeHint">Longitude</string>
    <string name="locationAddressHint">Address</string>

    <string name="locationPermissionGranted">Permission granted</string>
    <string name="locationPermissionDenied">Permission denied</string>

    <string name="airplaneModeOn">Airplane mode on</string>
    <string name="airplaneModeOff">Airplane mode off</string>

    <string name="internetConnected">Device is connected to internet.</string>
    <string name="noInternetConnection">Address cannot be updated. No internet connection.</string>

    <string name="timerStartButton" translatable="false">Start</string>
    <string name="timerPauseButton" translatable="false">Pause</string>
    <string name="timerPlayButton" translatable="false">Play</string>
    <string name="timerResetButton" translatable="false">Reset</string>
    <string name="timerFinishText">Time is out</string>

    <string name="searchCompany">Search company</string>
    <string name="searchCompanyButton">Search</string>
    <string name="searchCompanyHint">Search a company by name</string>
    <string name="searchCompanyTitle">Search</string>
    <string name="textViewSearching">Searching…</string>
    <string name="textViewCompanyNameTitle">Company name:</string>
    <string name="textViewCompanyBusinessIDTitle">Company business ID:</string>
    <string name="textViewCompanyFormTitle">Company form:</string>
    <string name="textViewCompanyRegistrationDateTitle">Registration date:</string>
    <string name="companyNotFoundText">Company not found</string>
    <string name="returnHomeText">Press the button to return home.</string>
    <string name="tipTextView">Try to add a company form. For example Kone Oy.</string>
    <string name="returnHomeButton">Home</string>

    <string name="gestureLeftSwipe">You swiped left to guess game</string>
    <string name="gestureRightSwipe">You swiped right to guess game</string>
    <string name="swipeResetTimer">Swipe to left or right to reset the timer</string>

    <string name="guessGameContentDescription">Guess game diamond</string>
    <string name="homeCatImageContentDescription">Home cat Image</string>

    <string name="appCreatedText">Application created by Jonne Kiukas</string>

</resources>