<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".GuessGame">

    <ImageView
        android:id="@+id/firstDiamond"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="255dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/diamond" />

    <ImageView
        android:id="@+id/secondDiamond"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="255dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/diamond" />

    <ImageView
        android:id="@+id/thirdDiamond"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="75dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/diamond" />

    <ImageView
        android:id="@+id/fourthDiamond"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="75dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/diamond" />

    <androidx.cardview.widget.CardView
        android:id="@+id/guessGameFirstCard"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="3dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@anim/guess_game_incorrect_answer"
        app:cardBackgroundColor="#989"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/guessGameSecondCard"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="230dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@anim/guess_game_incorrect_answer"
        app:cardBackgroundColor="#989"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/guessGameThirdCard"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@anim/guess_game_incorrect_answer"
        app:cardBackgroundColor="#989"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/guessGameFourthCard"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@anim/guess_game_incorrect_answer"
        app:cardBackgroundColor="#989"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/guessGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/guessGameTitle"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restartGuessGame"
        android:layout_width="122dp"
        android:layout_height="65dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="5dp"
        android:text="@string/guessGameRefreshButton"
        app:backgroundTint="@color/guessGameRestartButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/resetHighScore"
        android:layout_width="122dp"
        android:layout_height="65dp"
        android:layout_marginEnd="248dp"
        android:layout_marginBottom="5dp"
        android:text="@string/guessGameResetHighScoreButton"
        app:backgroundTint="@color/resetHighScoreButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/guessGameScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="448dp"
        android:text="@string/guessGameScore"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guessGameCalculateClicks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="216dp"
        android:text="@string/guessGameCurrentTries"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessGameSecondCard" />

    <TextView
        android:id="@+id/guessGameTotalTriesText"
        android:layout_width="237dp"
        android:layout_height="76dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="400dp"
        android:text="@string/guessGameTotalTriesText"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guessGameHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="491dp"
        android:text="@string/guessGameScore"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/guessGameHighScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="490dp"
        android:text="@string/guessGameHighScoreText"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>